crates/musq-macros/tests/trybuild/fail_row_flatten_try_from.stderr
error: `flatten` cannot be combined with `try_from`
  --> tests/trybuild/fail_row_flatten_try_from.rs:11:12
   |
11 |     inner: Inner,
   |            ^^^^^
